# cxlalloc

./: Cargo.toml  flake.nix  perf-record.sh  rust-toolchain.toml
crash/: Cargo.toml
crash/src/: lib.rs
cxlalloc/: Cargo.toml
cxlalloc-bench/: Cargo.toml  build.rs
cxlalloc-bench/src/: allocator.rs  index.rs  lib.rs  main.rs  worker.rs
cxlalloc-bench/src/allocator/: boost.rs  cxl_shm.rs  cxlalloc.rs  lightning.rs  mimalloc.rs  ralloc.rs
cxlalloc-bench/src/cpp/: boost.cpp  boost.hpp
cxlalloc-bench/workloads/: ablation-hwcc.toml  ablation-mcas.toml  huge.toml  interleave.toml  main.toml  mini.toml  process.toml
cxlalloc-global/: Cargo.toml
cxlalloc-global/src/: lib.rs
cxlalloc-preload/: Cargo.toml
cxlalloc-preload/src/: lib.rs
cxlalloc-recover/: Cargo.toml  build.rs
cxlalloc-recover/src/: clevel.rs  lib.rs  main.rs  queue.rs  worker.rs
cxlalloc-static/: Cargo.toml  cbindgen.toml
cxlalloc-static/include/: cxlalloc.h
cxlalloc-static/src/: lib.rs
cxlalloc-test/: Cargo.toml
cxlalloc-test/src/: lib.rs  main.rs  trace.rs  worker.rs
cxlalloc-test/traces/: huge-allocate-free.toml  huge-allocate-load.toml  huge-double-fault.toml  huge-multiple-slot.toml  large-lazy-free.toml  small-lazy-free.toml
cxlalloc/src/: allocator.rs  bitset.rs  box.rs  cache.rs  cas.rs  crash.rs  data.rs  error.rs  heap.rs  huge.rs  lib.rs  mcas.rs  raw.rs  recover.rs  size.rs  slab.rs  stat.rs  thread.rs  view.rs
cxlalloc/src/raw/: backend.rs  region.rs
cxlalloc/src/size/: huge.rs  large.rs  small.rs
cxlalloc/src/slab/: local.rs  remote.rs  stack.rs
cxlalloc/tests/: remote.rs  sequential.proptest-regressions  sequential.rs
mCAS/: README.md
mCAS/bitstreams/: mcas.cdf
mCAS/kmods/kmod_mCAS_target_buff/: Makefile  compile_install.sh  mcas_target_buff.c
mCAS/rtl/: README.md
mCAS/rtl/hardware_test_design/: cxltyp2_ed.qpf  cxltyp2_ed.qsf  cxltyp2_ed_ioaux_right_param_table.hex  ed_top_wrapper_typ2.sv  ed_top_wrapper_typ2.sv.bak  output_file_pof.map
mCAS/rtl/hardware_test_design/IP/: bram_2port_8w_128d.ip  bram_4port_8w_128d.ip  bram_4port_8w_256d.ip
mCAS/rtl/hardware_test_design/IP/.qsys_edit/: preferences.xml
mCAS/rtl/hardware_test_design/common/: CAS_type.sv
mCAS/rtl/hardware_test_design/common/afu/: afu_top.sv  mcas_ctrl.sv  simple_bram.sv
mCAS/rtl/hardware_test_design/common/cdc_self/: fifo_512w_16d.ip  fifo_64w_16d.ip
mCAS/rtl/hardware_test_design/common/cdc_self/.qsys_edit/: fifo_512w_16d.xml
mCAS/rtl/hardware_test_design/common/ex_default_csr/: ex_default_csr_avmm_slave.sv  ex_default_csr_top.sv
mCAS/rtl/hardware_test_design/common/mc_top/: axi2avmm_bridge.sv
mCAS/rtl/hardware_test_design/common/mc_top/emif_ip/.qsys_edit/: preferences.xml
mCAS/rtl/hardware_test_design/common/op_test/: CAS_type.sv  op_test.sv  w_64B.sv
mCAS/rtl/hardware_test_design/tmp-clearbox/cxltyp2_ed/3247232/: alt_synch_pipe_suu5.tdf  altera_syncram_2naf1.tdf  altera_syncram_68pn1.tdf  altera_syncram_7vr72.tdf  altera_syncram_8lib.tdf  altera_syncram_93s61.tdf  altera_syncram_97om.tdf  altera_syncram_ab9p.tdf  altera_syncram_c1071.tdf  altera_syncram_enmk1.tdf  altera_syncram_gdd22.tdf  altera_syncram_h346.tdf  altera_syncram_impl_0urq1.tdf  altera_syncram_impl_6ci1.tdf  altera_syncram_impl_6f951.tdf  altera_syncram_impl_8nkq1.tdf  altera_syncram_impl_9na.tdf  altera_syncram_impl_c4hs.tdf  altera_syncram_impl_c7a71.tdf  altera_syncram_impl_ca3i1.tdf  altera_syncram_impl_cdss1.tdf  altera_syncram_impl_rshi1.tdf  altera_syncram_impl_si4n.tdf  altera_syncram_impl_slt11.tdf  altera_syncram_impl_somc1.tdf  altera_syncram_impl_srfn1.tdf  altera_syncram_jpqj.tdf  altera_syncram_vq151.tdf  altsyncram_qilr1.tdf  altsyncram_sjd61.tdf  cmpr_549m.tdf  cmpr_5qsa.tdf  cmpr_elbq1.tdf  cntr_2l3c1.tdf  cntr_63m01.tdf  cntr_f7p2.tdf  cntr_i5l7.tdf  cntr_kd1j1.tdf  cntr_p76j.tdf  cntr_sq6q1.tdf  (+12 more)
mCAS/setup/: setup_all.sh
mCAS/ubench/: test_ubench.sh
mCAS/ubench/include/: csr.h  util.h
mCAS/ubench/src/: csr.cpp  main.cpp  util.cpp
plot/: ablation.py  common.py  compare.py  dashboard.py  estimate.py  huge.py  macro.py  memory.py  micro.py  numa.py  process.py  pyproject.toml  recover.py  stat.py  stat_size.py
script/: ablation.sh  normalize.sh  recovery.py  run.sh  setup.sh
twitter/: convert.sh  trace.schema
