[workspace]
members = [
    "crash",
    "cxlalloc",
    "cxlalloc-bench",
    "cxlalloc-global",
    "cxlalloc-preload",
    "cxlalloc-recover",
    "cxlalloc-static",
    "cxlalloc-test",
]
exclude = ["extern"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
backtrace = "0.3"
bindgen = "0.71"
bon = "3.3"
cartesian = "0.3"
clap = { version = "4.5", features = ["derive"] }
cmake = "0.1"
core_affinity = "0.8"
crossbeam-channel = "0.5"
ctor = "0.2"
cxx = "1.0"
cxx-build = "1.0"
duct = "0.13"
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
    "humantime",
] }
gcollections = "1.5"
hdrhistogram = "7.5"
intervallum = "1.4"
ipc-channel = "0.19"
libc = "0.2"
linkme = "0.3"
log = { version = "0.4", features = ["release_max_level_off"] }
# log = { version = "0.4" }
mimalloc = "0.1"
proptest = "1.0"
proptest-state-machine = "0.3"
rand = { version = "0.9", features = ["small_rng"] }
ribbit = { git = "https://github.com/nwtnni/ribbit.git", rev = "a9754c714151b138e9946a83e2ebbdc664069f59" }
serde = { version = "1.0", features = ["derive"] }
serde-inline-default = "0.2"
serde_json = "1.0"
shm.git = "https://github.com/nwtnni/shm.git"
shm-bench.git = "https://github.com/nwtnni/shm-bench.git"
thiserror = "2.0"
toml = "0.8"
ycsb = { git = "https://github.com/nwtnni/ycsb.git", features = ["serde"] }

# https://proptest-rs.github.io/proptest/proptest/tips-and-best-practices.html
[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3

[patch."https://github.com/nwtnni/shm.git"]
shm = { path = "extern/shm" }

[profile.release]
codegen-units = 1
debug = true
lto = "fat"
