[package]
name = "cxlalloc-static"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

[features]
default = ["arch-gpf", "recover"]

arch-gpf = ["cxlalloc/arch-gpf"]
recover = ["cxlalloc/recover"]
log = ["dep:env_logger"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxlalloc = { path = "../cxlalloc", default-features = false }
env_logger = { workspace = true, optional = true }
libc.workspace = true
log.workspace = true
shm = { git = "https://github.com/nwtnni/shm.git", features = ["dax", "ivshmem"] }
